# lambdas

exercises/: alphabet.cpp  area.cpp  dangling.cpp  threeWays.cpp
homework/schedule/: CMakeLists.txt  schedule.cpp  schedule.hpp
